[package]
name = "core-media-sys"
version = "0.1.2"
edition = "2018"
authors = ["luozijun <luozijun.assistant@gmail.com>"]
description = "Bindings to CoreMedia.framework for OS X and iOS"
license = "MIT"
homepage   = "https://github.com/luozijun/rust-core-media-sys"
repository = "https://github.com/luozijun/rust-core-media-sys"
documentation = "https://docs.rs/core-media-sys/*/x86_64-apple-darwin/core_media_sys"

[dependencies]
cfg-if = "1.0.0"
libc = "0.2"
core-foundation-sys = "0.8"
core-video-sys = "0.2.0"

[features]
default = []

[patch.crates-io]
core-video-sys = { git = "https://github.com/AstroHQ/core-video-sys" }
